external-crates/move/crates/move-compiler/tests/development/signed_ints/signed_int_inference_contexts.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: development
  lint: false
---
error[E13003]: feature is under active development
  ┌─ tests/development/signed_ints/signed_int_inference_contexts.move:7:17
  │
7 │         let _x: i8 = 1;
  │                 ^^ Signed integer types are under development

error[E13003]: feature is under active development
  ┌─ tests/development/signed_ints/signed_int_inference_contexts.move:7:22
  │
7 │         let _x: i8 = 1;
  │                      ^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_inference_contexts.move:11:17
   │
11 │         let _x: i16 = 100;
   │                 ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_inference_contexts.move:11:23
   │
11 │         let _x: i16 = 100;
   │                       ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_inference_contexts.move:15:17
   │
15 │         let _x: i32 = 1000;
   │                 ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_inference_contexts.move:15:23
   │
15 │         let _x: i32 = 1000;
   │                       ^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_inference_contexts.move:19:17
   │
19 │         let _x: i64 = 1000000;
   │                 ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_inference_contexts.move:19:23
   │
19 │         let _x: i64 = 1000000;
   │                       ^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_inference_contexts.move:23:17
   │
23 │         let _x: i128 = 1000000000000;
   │                 ^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_inference_contexts.move:23:24
   │
23 │         let _x: i128 = 1000000000000;
   │                        ^^^^^^^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_inference_contexts.move:27:24
   │
27 │     fun returns_i64(): i64 {
   │                        ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_inference_contexts.move:28:9
   │
28 │         42
   │         ^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_inference_contexts.move:32:22
   │
32 │     fun takes_i32(x: i32): i32 {
   │                      ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_inference_contexts.move:32:28
   │
32 │     fun takes_i32(x: i32): i32 {
   │                            ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_inference_contexts.move:37:28
   │
37 │         let _x = takes_i32(10);
   │                            ^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_inference_contexts.move:42:17
   │
42 │         let _x: i64 = -1;
   │                 ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_inference_contexts.move:42:23
   │
42 │         let _x: i64 = -1;
   │                       ^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_inference_contexts.move:47:18
   │
47 │         let _x = -1i64;
   │                  ^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_inference_contexts.move:47:19
   │
47 │         let _x = -1i64;
   │                   ^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_inference_contexts.move:52:17
   │
52 │         let _x: i32 = -5;
   │                 ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_inference_contexts.move:52:23
   │
52 │         let _x: i32 = -5;
   │                       ^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_inference_contexts.move:57:18
   │
57 │         let _x = 1i64 + 2;
   │                  ^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_inference_contexts.move:57:18
   │
57 │         let _x = 1i64 + 2;
   │                  ^^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_inference_contexts.move:61:18
   │
61 │         let _x = 2 + 1i64;
   │                  ^^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_inference_contexts.move:61:22
   │
61 │         let _x = 2 + 1i64;
   │                      ^^^^ Signed integer types are under development
